added a few updates

--- a/CognitiveBanners/templates/banner.html
+++ b/CognitiveBanners/templates/banner.html
@@ -74,8 +74,8 @@ $(document).ready(function() {
     <![endif]-->
   </head>
 
-  <body bgcolor="#DFE2DB">
-    <table width="90%" height="80%" bgcolor="#7E8F7C" >
+  <body bgcolor="brown"">
+    <table width="90%" height="80%" bgcolor="#7E8F7C" align="center" >
 
         <tr>
             <td><h4>Select city to change Banner :     <select id="city">
