--- a/CognitiveBanners/templates/banner.html
+++ b/CognitiveBanners/templates/banner.html
@@ -18,57 +18,168 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style type="text/css">
+
+h1{
+  font-size: 30px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 15px;
+}
+table{
+  width:100%;
+  table-layout: fixed;
+}
+.tbl-header{
+  background-color: rgba(255,255,255,0.3);
+}
+.tbl-content{
+  height:300px;
+  overflow-x:auto;
+  margin-top: 0px;
+
+}
+th{
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+}
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+}
+
+
+/* demo styles */
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+body{
+  background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+  background: linear-gradient(to right, #25c481, #25b7c4);
+  font-family: 'Roboto', sans-serif;
+}
+section{
+  margin: 50px;
+}
+
+
+/* follow me template */
+.made-with-love {
+  margin-top: 40px;
+  padding: 10px;
+  clear: left;
+  text-align: center;
+  font-size: 10px;
+  font-family: arial;
+  color: #fff;
+}
+.made-with-love i {
+  font-style: normal;
+  color: #F50057;
+  font-size: 14px;
+  position: relative;
+  top: 2px;
+}
+.made-with-love a {
+  color: #fff;
+  text-decoration: none;
+}
+.made-with-love a:hover {
+  text-decoration: underline;
+}
+
+
+/* for custom scrollbar for webkit browser*/
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+select{
+    background: #fff;
+    color: #000;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.portrait {
+    width: 780px;
+}
+  </style>
 
                 <script lang="javascript" type="text/javascript">
 $(document).ready(function() {
 
-                                $("#paintBanner").on("click",function(){
-            var customerid= Math.ceil(Math.random()*10000) || 0000;
-            var bannerid = $(this).find("img").attr("id");
-            var clickedState = true;
-            var location = getCity();
+            $("#paintBanner").on("click",function(){
+                                                                var customerid= Math.ceil(Math.random()*10000) || 0000;
+                                                                var bannerid = $(this).find("img").attr("id");
+                                                                var clickedState = true;
+                                                                var location = getCity();
 
-            document.getElementById('message').innerHTML = "Your customerID "+customerid+" for banner "+bannerid+" having clicked="+clickedState+" with "+location+" location will be saved."
+                                                                document.getElementById('message').innerHTML = "Your customerID "+customerid+" for banner "+bannerid+" having clicked="+clickedState+" with "+location+" location will be saved."
 
-            <!--alert("CID"+customerid+" bannerid="+bannerid+" clicked="+clickedState+" location="+location);-->
+                                                                <!--alert("CID"+customerid+" bannerid="+bannerid+" clicked="+clickedState+" location="+location);-->
 
-                                    var url = "http://127.0.0.1:5002/adclick/?customerid="+customerid+"&bannerid="+bannerid+"&location="+location+"&clicked="+clickedState;
-                                                $.ajax({
-                                                  url: url,
-                                                  type: 'POST',
-                                                  success: function(data){
-                  console.log(data);
-              }
-                                                });
-                                });
+                                                                var url = "http://127.0.0.1:5002/adclick/?customerid="+customerid+"&bannerid="+bannerid+"&location="+location+"&clicked="+clickedState;
+                                                                $.ajax({
+                                                                  url: url,
+                                                                  type: 'POST',
+                                                                  success: function(data){
+                                                                                console.log(data);
+                                                                   }
+                                                                });
+            });
 
-                                $("#city").on("change",function(){
-                                                getBanner();
-                                });
-        function getBanner(){
+         $("#city").on("change",function(){
+                     getBanner();
+         });
+         function getBanner(){
+                                                console.log("get banner");
             var cityName = getCity() || "mumbai";
             $.ajax({
-                                                  url: 'http://127.0.0.1:5002/adclick/ajio/hero/'+cityName,
-                                                  type: 'GET',
-                                                  success: function(data){
-                  updateImage(data);
+                 url: 'http://127.0.0.1:5002/adclick/ajio/hero/'+cityName,
+                 type: 'GET',
+                 success: function(data){
+                 updateImage(data);
               }
-                                                });
-        }
-                                function updateImage(data){
-                                                console.log(data);
-                                                var data = JSON.parse(data);
-                                                document.getElementById('message').innerHTML ="Click the banner to save your clicked state!"
-                                                var imgResponse = "<img id="+data.key+" src=../static/"+data.value+" />";
-                                                $("#paintBanner").html(imgResponse)
-                                }
-                                function getCity(){
-                                                return ""+$("#city option:selected").text();
-                                }
+            });
+         }
 
-        getBanner();
-                });
-                </script>
+         function updateImage(data){
+                     console.log(data);
+                     var data = JSON.parse(data);
+                     document.getElementById('message').innerHTML ="Click the banner to save your clicked state!"
+                     var imgResponse = "<img id="+data.key+" src=../static/"+data.value+" />";
+                     $("#paintBanner").html(imgResponse)
+         }
+         function getCity(){
+                     return ""+$("#city option:selected").text();
+         }
+
+                                getBanner();
+
+        setInterval(getBanner,6000);
+
+
+
+
+      });
+      </script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -85,18 +196,15 @@ $(document).ready(function() {
                   </select>
                 </h4>
             </td>
-        </tr>
-        <tr><td></td></tr>
-        <tr>
-            <td >
+            <td align="left">
                 <h5><div id="message" class="btext">Click the banner to save your clicked state!</div></h5>
             </td>
         </tr>
         <tr>
-            <td width="100%" height="80%">
+            <td width="100%" height="80%" colspan="2">
                  <div class="container">
-                  <div id="paintBanner" width="400px" height="400px" >
-                        <img id="diesel"  src="../static/loading.gif"  />
+                  <div id="paintBanner" class="portrait">
+                        <img id="diesel"  src="https://raw.githubusercontent.com/vishnuprasadh/CognitiveBanners/master/CognitiveBanners/static/Diesel.png" />
                   </div>
 
                 </div>
